# depmap-omics-pipelines-public

./: README.md
dockerfiles/: alpine.Dockerfile  bcftools.Dockerfile  biobambam2.Dockerfile  biobambam2_seqkit.Dockerfile  bwa.Dockerfile  mafsmith.Dockerfile  picard.Dockerfile  python_extra.Dockerfile  samtools_picard.Dockerfile
long_read_rna/align_lr_rna/: align_lr_rna.json  align_lr_rna.wdl
long_read_rna/call_lr_rna_fusions/: call_lr_rna_fusions.json  call_lr_rna_fusions.wdl
long_read_rna/combine_gtfs/: combine_gtfs.json  combine_gtfs.wdl
long_read_rna/common/combine-requantify-tools/: pyproject.toml
long_read_rna/common/combine-requantify-tools/combine_requantify_tools/: filter_gtf_and_tracking.py
long_read_rna/quantify_lr_rna/: README.md  quantify_lr_rna.json  quantify_lr_rna.wdl
long_read_rna/requantify_lr_rna/: requantify_lr_rna.json  requantify_lr_rna_inputs.json
rna/process_sr_rna/: process_sr_rna.wdl
wdl/: .dockstore.yml  .gitignore
wdl/cclf_wgs_qc/call_cnvs/: README.md
wgs/annotate_mutations/: annotate_mutations.json  annotate_mutations.wdl  annotate_mutations_inputs.json
wgs/annotate_mutations_merge/: annotate_mutations_merge.json  annotate_mutations_merge.wdl  annotate_mutations_merge_inputs.json  vcf_to_duckdb_config.json
wgs/call_cnvs/: call_cnvs.wdl
wgs/call_mutations/: call_mutations_patched.json  call_mutations_patched_inputs.json
wgs/cram_to_bam/: cram_to_bam.wdl
wgs/patch_hg38_bam/: patch_hg38_bam.json  patch_hg38_bam.wdl  patch_hg38_bam_inputs.json
wgs/prep_annotations/: prep_annotations.json  prep_annotations.wdl
(+96 files in other folders)
